Fixed layout bugs on appointments page.

--- a/app/assets/stylesheets/apartments.scss
+++ b/app/assets/stylesheets/apartments.scss
@@ -8,14 +8,12 @@ img {
 
 .apartment {
     padding: 40px 25px 40px 25px;
-    max-width: 900px;
     margin-top: 50px;
     margin-bottom: 50px;
     box-shadow: 5px 5px 10px 5px grey;
 }
 
 #apartment-address {
-    // flex-grow: 1;
     margin: 0 0 0 35px;
 }
 
